# quantgist-SDK-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
examples/: cpi_eurusd_analysis.py  nfp_gold_analysis.py  quickstart.py  rate_decisions_analysis.py
research/: dataset_guide.md  point_in_time.md
research/strategies/: news_avoidance.py  surprise_momentum.py
src/quantgist/: __init__.py  _http.py  async_client.py  client.py  exceptions.py  models.py  types.py
src/quantgist/resources/: __init__.py  calendar.py  events.py  intelligence.py  news.py  notifications.py  sentiment.py  symbols.py  usage.py  v2.py  watchlists.py  webhooks.py
tests/: test_client.py  test_models.py
